Bug 1316965: Give file inputs an a11y role of GROUPING so screen readers report their label when focus enters them. r=MarcoZ a=lizzard

Differential Revision: https://phabricator.services.mozilla.com/D46375